force-app/main/default/objects/Account/fields/sugati__A_ABTA_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_ABTA_Number__c</fullName>
    <label>ABTA Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>