force-app/main/default/objects/Account/fields/sugati__A_Account_Source__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_Account_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>