force-app/main/default/objects/Account/fields/sugati__A_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_Address_Line_1__c</fullName>
    <label>Address Line 1</label>
    <type>TextArea</type>
</CustomField>