force-app/main/default/objects/Account/fields/sugati__A_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_Address_Line_3__c</fullName>
    <label>Address Line 3</label>
    <type>TextArea</type>
</CustomField>