force-app/main/default/objects/Account/fields/sugati__A_Agree_to_receive_brochure__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_Agree_to_receive_brochure__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Agree to receive brochure</label>
    <type>Checkbox</type>
</CustomField>