force-app/main/default/objects/Account/fields/sugati__A_Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_Campaign_Code__c</fullName>
    <label>Campaign_Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>