force-app/main/default/objects/Account/fields/sugati__A_Email__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_Email__c</fullName>
    <inlineHelpText>Account Email is required</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>