force-app/main/default/objects/Account/fields/sugati__A_First_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_First_Name__c</fullName>
    <description>First name (Eg: Tim, Donna)</description>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>