force-app/main/default/objects/Account/fields/sugati__A_Household_No__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_Household_No__c</fullName>
    <externalId>true</externalId>
    <label>Household No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>