force-app/main/default/objects/Account/fields/sugati__A_How_Heard_Details__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_How_Heard_Details__c</fullName>
    <label>How Heard Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>