force-app/main/default/objects/Account/fields/sugati__A_Last_Enquiry_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_Last_Enquiry_Date__c</fullName>
    <label>Last Enquiry Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Booked, Booking Optional, Booking cancelled, Training enquiry</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>