force-app/main/default/objects/Account/fields/sugati__A_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_Last_Name__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>