force-app/main/default/objects/Account/fields/sugati__A_Last_Travelled_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_Last_Travelled_Date__c</fullName>
    <label>Last Travelled Date</label>
    <summarizedField>Opportunity.sugati__O_Departure_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Booked</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>