force-app/main/default/objects/Account/fields/sugati__A_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_Postal_Code__c</fullName>
    <formula>BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Code</label>
    <type>Text</type>
</CustomField>