force-app/main/default/objects/Account/fields/sugati__A_Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_Referral_Date__c</fullName>
    <label>Referral Date</label>
    <type>Date</type>
</CustomField>