force-app/main/default/objects/Account/fields/sugati__A_Referrer__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_Referrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referrer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Referrer</relationshipName>
    <type>Lookup</type>
</CustomField>