force-app/main/default/objects/Account/fields/sugati__A_Salutation__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_Salutation__c</fullName>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Baron</fullName>
            </value>
            <value>
                <fullName>Baroness</fullName>
            </value>
            <value>
                <fullName>Capt</fullName>
            </value>
            <value>
                <fullName>Count</fullName>
            </value>
            <value>
                <fullName>Dame</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Earl</fullName>
            </value>
            <value>
                <fullName>HRH</fullName>
            </value>
            <value>
                <fullName>Lady</fullName>
            </value>
            <value>
                <fullName>Lord</fullName>
            </value>
            <value>
                <fullName>Maj Gen</fullName>
            </value>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>Miss</fullName>
            </value>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Prof.</fullName>
            </value>
            <value>
                <fullName>Rabbi</fullName>
            </value>
            <value>
                <fullName>Rev</fullName>
            </value>
            <value>
                <fullName>Sir</fullName>
            </value>
            <value>
                <fullName>The Hon</fullName>
            </value>
            <value>
                <fullName>The RT Hon</fullName>
            </value>
            <value>
                <fullName>Viscount</fullName>
            </value>
            <value>
                <fullName>Viscountess</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>