force-app/main/default/objects/Account/fields/sugati__A_Status__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_Status__c</fullName>
    <formula>IF(AND(sugati__A_Total_Bookings__c = 0,sugati__A_Total_Quotes__c = 0), &quot;Lead&quot;, 
IF(AND(sugati__A_Total_Bookings__c = 0,sugati__A_Total_Quotes__c &gt; 0), &quot;Potential Client&quot;,
IF(sugati__A_Total_Bookings__c = 1, &quot;Client&quot;, 
IF(sugati__A_Total_Bookings__c &gt; 1, &quot;Repeat Client&quot;, null
))))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>