force-app/main/default/objects/Account/fields/sugati__A_Total_Bookings__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_Total_Bookings__c</fullName>
    <label>Total Bookings</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Booked, Booking cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>