force-app/main/default/objects/Account/fields/sugati__A_Total_Compensation_Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_Total_Compensation_Credit_Memo__c</fullName>
    <label>Total Compensation Credit Memo</label>
    <summarizedField>sugati__Credit_Memo__c.sugati__CM_Amount__c</summarizedField>
    <summaryForeignKey>sugati__Credit_Memo__c.sugati__CM_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>