force-app/main/default/objects/Account/fields/sugati__A_Total_Non_Lead_Bookings__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_Total_Non_Lead_Bookings__c</fullName>
    <label>Total Non-Lead Bookings</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>