force-app/main/default/objects/Account/fields/sugati__A_Total_Non_Lead_Revenue__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_Total_Non_Lead_Revenue__c</fullName>
    <label>Total Non-Lead Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>