force-app/main/default/objects/Account/fields/sugati__A_Total_Quotes__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_Total_Quotes__c</fullName>
    <label>Total Quotes</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Quote pending, Quoted to client, Quote gone cold, Cold</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>