force-app/main/default/objects/Account/fields/sugati__A_Type_of_Travel__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_Type_of_Travel__c</fullName>
    <label>Type of Travel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Family Travel</fullName>
            </value>
            <value>
                <fullName>Wildlife/Safari</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Expedition</fullName>
            </value>
            <value>
                <fullName>Trekking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>