force-app/main/default/objects/Account/fields/sugati__A_Update__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For data update.</description>
    <label>Update</label>
    <type>Checkbox</type>
</CustomField>