force-app/main/default/objects/Account/fields/sugati__A_What_Prompted_This_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>sugati__A_What_Prompted_This_Enquiry__c</fullName>
    <label>What Prompted This Enquiry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Angels &amp; Urchins</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>