force-app/main/default/objects/Account/fields/sugati__Bookings_in_last_year__c.field-meta.xml
<CustomField>
    <fullName>sugati__Bookings_in_last_year__c</fullName>
    <label>Bookings in last year</label>
    <summaryFilterItems>
        <field>Opportunity.sugati__Is_in_last_year__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>