force-app/main/default/objects/Account/fields/sugati__Customer_LTV__c.field-meta.xml
<CustomField>
    <fullName>sugati__Customer_LTV__c</fullName>
    <description>Show lifetime value of customer (total value of won opportunities)</description>
    <inlineHelpText>Show lifetime value of customer (total value of won opportunities)</inlineHelpText>
    <label>Customer LTV</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>