force-app/main/default/objects/Account/fields/sugati__NumberofLocations__c.field-meta.xml
<CustomField>
    <fullName>sugati__NumberofLocations__c</fullName>
    <label>Number of Locations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>