force-app/main/default/objects/Account/fields/sugati__SLAExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>sugati__SLAExpirationDate__c</fullName>
    <label>SLA Expiration Date</label>
    <type>Date</type>
</CustomField>