force-app/main/default/objects/Account/fields/sugati__Total_Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>sugati__Total_Credit_Memo__c</fullName>
    <label>Credit and Discount</label>
    <summarizedField>sugati__Credit_Memo__c.sugati__CM_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>sugati__Credit_Memo__c.sugati__CM_Is_Expired__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>sugati__Credit_Memo__c.sugati__CM_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>