force-app/main/default/objects/Account/fields/sugati__User_Division__c.field-meta.xml
<CustomField>
    <fullName>sugati__User_Division__c</fullName>
    <formula>CreatedBy.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Division</label>
    <type>Text</type>
</CustomField>